[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/shake_layer/movement_hud/movement_hud.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font_small.tres" type="DynamicFont" id=2]

[node name="MovementHUD" type="Control"]
modulate = Color( 1, 1, 1, 0.235294 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="MaxLabel" type="Label" parent="."]
margin_left = -20.16
margin_top = -7.0
margin_right = 19.84
margin_bottom = 7.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "MAX"
align = 1
valign = 1
uppercase = true

[node name="AccLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "ACC"
align = 1
valign = 1
uppercase = true

[node name="Velocity" type="Control" parent="."]
margin_right = 167.0
margin_bottom = 29.0
rect_min_size = Vector2( 50, 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Velocity"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Velocity/VBoxContainer"]
margin_right = 167.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "VELOCITY"

[node name="MarginContainer" type="MarginContainer" parent="Velocity/VBoxContainer"]
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityMeter" type="ColorRect" parent="Velocity/VBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 8 )
size_flags_horizontal = 0
